--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -67,8 +67,9 @@ yak:
                 type: "zip"
                 dir: "tinymce_3.5.6_jquery/tinymce/jscripts/tiny_mce"
                 production:
-                    tiny.mce-3.5.6.js: "tiny_mce_src.js"
-                    tiny.jquery-3.5.6.js: "jquery.tinymce.js"
+                # Does script location detection - needs _full to match unfortunately
+                    tiny_mce_full-3.5.6.js: "tiny_mce_src.js"
+                    tiny_mce_jquery-3.5.6.js: "jquery.tinymce.js"
                     themes: "themes"
                     plugins: "plugins"
                     langs: "langs"
