--- a/puke-yak.yaml
+++ b/puke-yak.yaml
@@ -62,13 +62,15 @@ yak:
             "License": "LGPL"
             "Destination": "frameworks/tinymce"
             "Source":
-                tiny.zip: "http://github.com/downloads/tinymce/tinymce/tinymce_3.5.6_jquery.zip"
+                # tiny.zip: "http://github.com/downloads/tinymce/tinymce/tinymce_3.5.6_jquery.zip"
+                tiny.zip: "http://github.com/downloads/tinymce/tinymce/tinymce_3.5.6_dev.zip"
             Build:
                 type: "zip"
                 dir: "tinymce_3.5.6_jquery/tinymce/jscripts/tiny_mce"
                 production:
                 # Does script location detection - needs _full to match unfortunately
                     tiny_mce_full.js: "tiny_mce_src.js"
+                    tiny_mce_dev.js: "tiny_mce_dev.js"
                     tiny_mce_jquery.js: "jquery.tinymce.js"
                     themes: "themes"
                     plugins: "plugins"
