--- a/yanks/frameworks.yaml
+++ b/yanks/frameworks.yaml
@@ -10,8 +10,10 @@ yanks:
     Source:
       handlebars.runtime-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.0.beta.6"
       handlebars.main-1.b6.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.0.beta.6.js"
-      handlebars.runtime-1.rc1.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.rc.1.js"
-      handlebars.main-1.rc1.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.rc.1.js"
+      handlebars.runtime-1.0.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.rc.1.js"
+      handlebars.main-1.0.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.rc.1.js"
+      handlebars.runtime-stable.js: "https://github.com/downloads/wycats/handlebars.js/handlebars.runtime-1.0.rc.1.js"
+      handlebars.main-stable.js: "https://github.com/downloads/wycats/handlebars.js/handlebars-1.0.rc.1.js"
       git: "git://github.com/wycats/handlebars.js.git"
     Build:
       type: "rake"
@@ -29,6 +31,7 @@ yanks:
     Source:
       jquery-1.7.js: "http://code.jquery.com/jquery-1.7.js"
       jquery-1.8.js: "http://code.jquery.com/jquery-1.8.2.js"
+      jquery-stable.js: "http://code.jquery.com/jquery-1.8.2.js"
       jquery-trunk.js: "http://code.jquery.com/jquery-git.js"
 
   # Ember
@@ -38,8 +41,10 @@ yanks:
     Source:
       ember.prod-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.min.js"
       ember.debug-0.9.6.js: "https://github.com/downloads/emberjs/ember.js/ember-0.9.6.js"
-      ember.prod-1.0.pre.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.pre.min.js"
-      ember.debug-1.0.pre.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.pre.js"
+      ember.prod-1.0.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.min.js"
+      ember.debug-1.0.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.js"
+      ember.prod-stable.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.min.js"
+      ember.debug-stable.js: "https://github.com/downloads/emberjs/ember.js/ember-1.0.0-pre.2.js"
       git: "git://github.com/emberjs/ember.js.git"
     Build:
       type: "rake"
@@ -54,18 +59,20 @@ yanks:
     Destination: "frameworks"
     Source:
       normalize-2.0.css: "http://necolas.github.com/normalize.css/2.0.1/normalize.css"
+      normalize-stable.css: "http://necolas.github.com/normalize.css/2.0.1/normalize.css"
       normalize-trunk.css: "https://raw.github.com/necolas/normalize.css/master/normalize.css"
 
   h5bp:
     Destination: "frameworks"
     License: "MIT"
     Source:
-      h5bp.zip: "https://github.com/h5bp/html5-boilerplate/zipball/v4.0.0"
+      h5bp.zip: "https://github.com/h5bp/html5-boilerplate/zipball/v4.0.1"
     Build:
       type: "zip"
-      dir: "v4/h5bp-html5-boilerplate-2279296"
+      dir: "v4.0/h5bp-html5-boilerplate-3bc5ed9"
       production:
-        html5-css-4.0.0.css: "css/main.css"
+        html5-css-4.0.css: "css/main.css"
+        html5-css-stable.css: "css/main.css"
 
 
   backbone:
@@ -73,7 +80,8 @@ yanks:
     Destination: "frameworks"
     Source:
       # backbone-stable.js: "http://backbonejs.org/backbone.js"
-      backbone-0.9.2.js: "https://raw.github.com/documentcloud/backbone/0.9.2/backbone.js"
+      backbone-0.9.js: "https://raw.github.com/documentcloud/backbone/0.9.2/backbone.js"
+      backbone-stable.js: "https://raw.github.com/documentcloud/backbone/0.9.2/backbone.js"
       backbone-trunk.js: "https://raw.github.com/documentcloud/backbone/master/backbone.js"
 
   # XXX - no proper version
