--- a/package.json
+++ b/package.json
@@ -42,9 +42,6 @@
   "homepage": "http://airstrip.jsboot.com",
 
   "directories": {
-    "src": "src",
-    "doc": "build/doc",
-    "test": "build/dist/airstrip.js/1.0/tests",
-    "lib": "build/dist/airstrip.js/1.0/"
+    "src": "src"
   }
 }
